tests/baselines/reference/parserClassDeclaration22.errors.txt
//// [tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration22.ts] ////

parserClassDeclaration22.ts(3,5): error TS2389: Function implementation name must be '"foo"'.


==== parserClassDeclaration22.ts (1 errors) ====
    class C {
        "foo"();
        "bar"() { }
        ~~~~~
!!! error TS2389: Function implementation name must be '"foo"'.
    }